--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0"
+    "vaul": "^0.9.0",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
     "@types/multer": "^1.4.13",
