--- a/package.json
+++ b/package.json
@@ -39,17 +39,21 @@
     "@radix-ui/react-visually-hidden": "^1.0.3",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.10",
+    "chokidar": "^3.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.2.0",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.0.0",
+    "form-data": "^4.0.4",
     "framer-motion": "^12.23.12",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.323.0",
     "multer": "^2.0.2",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "node-fetch": "^2.7.0",
     "qrcode": "^1.5.3",
     "react": "^18",
     "react-day-picker": "^8.10.0",
@@ -57,18 +61,13 @@
     "react-resizable-panels": "^1.0.9",
     "recharts": "^2.15.4",
     "shadcn": "^2.10.0",
-    "sharp": "^0.34.3",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
-    "yet-another-react-lightbox": "^3.25.0",
-    "chokidar": "^3.5.3",
-    "form-data": "^4.0.0",
-    "node-fetch": "^2.7.0"
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
     "@types/multer": "^1.4.13",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -80,5 +79,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "wrangler": "^4.27.0"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.34.3"
   }
 }
