--- a/.env
+++ b/.env
@@ -152,3 +152,24 @@ DSLR_ENABLE_METADATA_EXTRACTION=false
 # Parallel processing
 DSLR_PARALLEL_UPLOADS=3
 DSLR_QUEUE_SIZE_LIMIT=100
+# Testing Configuration
+
+# ===== TESTING CONFIGURATION =====
+# Admin credentials for testing
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin123
+
+# Load testing parameters
+LOAD_TEST_CONCURRENT_USERS=50
+LOAD_TEST_PHOTOS_PER_USER=5
+LOAD_TEST_DELAY=100
+
+# Database testing parameters
+DB_TEST_CONCURRENT_CONNECTIONS=20
+DB_TEST_OPERATIONS_PER_CONNECTION=50
+
+# DSLR testing parameters
+DSLR_TEST_PHOTOS_COUNT=100
+DSLR_TEST_BATCH_SIZE=10
+DSLR_TEST_BATCH_DELAY=2000
+DSLR_TEST_PHOTO_SIZE=2097152
