update by irvannandika

--- a/.env.production
+++ b/.env.production
@@ -10,8 +10,8 @@ SUPABASE_SERVICE_ROLE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
 JWT_SECRET=hafiportrait-production-secret-key-$(date +%s)
 
 # Production API URL
-NEXT_PUBLIC_APP_URL=https://ipvhepiuwpol.ap-southeast-1.clawcloudrun.com
-DSLR_API_BASE_URL=https://ipvhepiuwpol.ap-southeast-1.clawcloudrun.com
+NEXT_PUBLIC_APP_URL=https://hafiportrait.photography
+DSLR_API_BASE_URL=https://hafiportrait.photography
 
 # Performance optimizations
 DSLR_PERFORMANCE_PROFILE=PRODUCTION
