update auto uploads

--- a/.env.local
+++ b/.env.local
@@ -50,10 +50,10 @@ DSLR_API_RETRY_DELAY=5000
 
 # ===== EVENT CONFIGURATION =====
 # Event ID (REQUIRED - change this!)
-DSLR_EVENT_ID=hafiportrait-production-test-1754502822
+#DSLR_EVENT_ID=hafiportrait-production-test-1754502822
 
 # Photographer details
-DSLR_UPLOADER_NAME=Official Photographer
+DSLR_UPLOADER_NAME=Hafiportrait
 DSLR_ALBUM_NAME=Official
 
 # Auto-create event if not exists
