--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/react-visually-hidden": "^1.0.3",
     "@supabase/supabase-js": "^2.39.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.17.10",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
