fix all erros issue

--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@ SUPABASE_SERVICE_ROLE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
 # JWT Secret for Authentication
 JWT_SECRET=hafiportrait-super-secret-key-change-in-production
 
+# Production URL (for deployment)
+NEXT_PUBLIC_APP_URL="http://bwpwwtphgute.ap-southeast-1.clawcloudrun.com"
+
 
 # Cloudflare R2 Configuration
 CLOUDFLARE_R2_ACCOUNT_ID="b14090010faed475102a62eca152b67f"
@@ -58,7 +61,7 @@ DSLR_CLEANUP_DAYS=30
 
 # ===== API CONFIGURATION =====
 # API base URL
-DSLR_API_BASE_URL=https://hafiportrait.photography
+DSLR_API_BASE_URL=http://bwpwwtphgute.ap-southeast-1.clawcloudrun.com
 
 # API timeouts (milliseconds)
 DSLR_API_TIMEOUT=30000
