--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 # ===================================
 # LOCAL DSLR SYSTEM ENVIRONMENT
 # ===================================
-
+NEXT_PUBLIC_APP_URL="http://bwpwwtphgute.ap-southeast-1.clawcloudrun.com"
 # ===================================
 # DATABASE (Shared dengan Vercel)
 # ===================================
@@ -33,5 +33,7 @@ DSLR_STORAGE_STRATEGY="cloudflare-google"
 # ===================================
 # API CONFIGURATION
 # ===================================
-DSLR_API_BASE_URL="https://hafiportrait.photography"
+NODE_ENV="development"
+DSLR_API_BASE_URL="http://bwpwwtphgute.ap-southeast-1.clawcloudrun.com"
 JWT_SECRET="hafiportrait-super-secret-key-change-in-production"
+NODE_ENV=development
